tests/stage2/t3_diagnostics/type_errors/wrong_arg_type.fuse
// EXPECTED ERROR:
// type mismatch

fn add(a: Int, b: Int) -> Int { a + b }

@entrypoint
fn main() {
  val result: String = add(1, 2)
  println(result)
}
